# qml-cmake

./: CMakeLists.txt  main.cpp
qml/: main.qml
